crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_backoff_constant_sequence.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: seq
---
strategy: Constant
base_ms: 500
max_ms: 5000
jitter: 0
delays_ms:
  - 500
  - 500
  - 500
  - 500
  - 500
