crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_backoff_exponential_clamped.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: seq
---
strategy: Exponential
base_ms: 100
max_ms: 300
jitter: 0
delays_ms:
  - 100
  - 200
  - 300
  - 300
  - 300
  - 300
  - 300
  - 300
