crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_backoff_exponential_sequence.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: seq
---
strategy: Exponential
base_ms: 100
max_ms: 5000
jitter: 0
delays_ms:
  - 100
  - 200
  - 400
  - 800
  - 1600
  - 3200
  - 5000
  - 5000
