crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_backoff_linear_sequence.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: seq
---
strategy: Linear
base_ms: 200
max_ms: 5000
jitter: 0
delays_ms:
  - 200
  - 400
  - 600
  - 800
  - 1000
  - 1200
  - 1400
  - 1600
