crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_classify_already_uploaded.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: snap
---
class: permanent
message: permanent failure (fix required)
