crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_classify_network_reset.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: snap
---
class: retryable
message: transient failure (retryable)
