crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_classify_unknown_error.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: snap
---
class: ambiguous
message: publish outcome ambiguous; registry did not show version
